Prevent popups text from being cut off and make bottom spacing for vertical page previews consistent
Bug: T330570

--- a/src/ui/templates/popup/popup.less
+++ b/src/ui/templates/popup/popup.less
@@ -80,6 +80,7 @@
 		color: @color-base;
 		text-decoration: none;
 		position: relative;
+		padding-bottom: 4px; // T330570
 
 		&:hover {
 			text-decoration: none;
@@ -174,7 +175,6 @@
 			max-height: 202px - @previewFooterHeight - @popupPadding;
 			overflow: hidden;
 			margin-bottom: @minHeight;
-			padding-bottom: 0;
 		}
 
 		footer {
